--- a/package.json
+++ b/package.json
@@ -1,8 +1,13 @@
 {
-  "name": "runner",
+  "name": "runner.js",
   "version": "1.0.0",
   "description": "A lightweight async tool in JavaScript inspired by Express middleware",
   "main": "index.js",
+  "homepage": "https://github.com/seqs/runner.js",
+  "repository": {
+    "type": "git",
+    "url": "git://github.com/seqs/runner.js.git"
+  },
   "directories": {
     "example": "examples"
   },
